background blurr issues solved

--- a/pages/uploadComplete/uploadComplete.css
+++ b/pages/uploadComplete/uploadComplete.css
@@ -33,7 +33,7 @@
 .upload-center {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
